--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,5 +69,5 @@ jobs:
     
     - name: Check package
       run: |
-        uv run python -m pip install twine
+        uv pip install twine
         uv run twine check dist/*
