--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,8 @@ jobs:
     
     - name: Check package
       run: |
-        uv run python -m pip install twine
+        uv venv
+        uv pip install twine
         uv run twine check dist/*
     
     - name: Upload build artifacts
