Add Azure DevOps Git Tools and MCP Server Integration
- Implemented a comprehensive script (git_examples.py) demonstrating various Git operations for Azure DevOps, including repository management, commit analysis, and pull request workflows.
- Created a configuration file (mcp-config.json) for MCP server setup with necessary environment variables.
- Developed a test suite (test_fastmcp.py) to verify FastMCP tool registration and functionality.
- Added extensive tests (test_mcp_tools.py) to ensure all Azure DevOps tools are properly registered with the MCP server.
- Implemented a detailed test suite (test_git_tools.py) for Git tools, validating repository management, commit analysis, and pull request workflows.
- Created tests (test_mcp_registration.py) to verify MCP server tool registration and parameter definitions.
- Added a simple verification script (test_mcp_simple.py) to ensure successful MCP server creation and tool imports.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "azuredevops-tools"
-version = "0.1.1"
-description = "Azure DevOps Tools for Model Context Protocol (MCP) integration"
+version = "0.2.0"
+description = "Comprehensive Azure DevOps Tools for Model Context Protocol (MCP) integration including Git repositories, pull requests, builds, changesets, and approval workflows"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
